# sim_car

./: .gitignore  README.md
car_description/: CMakeLists.txt  package.xml
car_description/behavior_trees/: navigate_w_replanning_time2.xml
car_description/config/: blue_params.yaml  nav2_params.yaml  red-crash.rviz  teleop_twist_joy.yaml
car_description/launch/: all.launch.py  blue2.py  blue_launch.py  bringup.launch.py  bringup.launch2.py  spawn_car.launch.py  spawn_fake_car.launch.py  spawn_red_crash.launch.py  spawn_robot_launch_v4.launch.py  spawn_world.launch.py
car_description/robot/: car.urdf.xacro  red_crash.urdf.xacro
car_description/scripts/: convert_xacro.py  play.html  sentry.py  spawn_bot.py
car_description/worlds/: simple.world
car_description/worlds/simple_world_maps/: map_1669268298.pgm  map_1669268298.yaml  map_1669312051.pgm  map_1669312051.yaml
car_gazebo_plugin/: CMakeLists.txt  package.xml
car_gazebo_plugin/src/: car_gazebo_plugin.cpp  car_gazebo_plugin.hpp
launch/: spawn_robot_launch_v4.launch.py
lxd/: build-container.sh  gui.profile  install-inside-container.sh
robot/: car.urdf.xacro
scripts/: convert_xacro.py
web/: index.html
